# AI-Chat-Reader

./: .gitignore  ARCHITECTURE.md  CHECKLIST.md  LICENSE  README.md  RELEASE.md  chat-archive-converter-v1.0.0-build-1.spec  chat-archive-converter-v1.0.0-build-18051.spec  chat-archive-converter-v1.0.0-build-67027.spec  chat-archive-converter-v1.0.0-build-75027.spec  chat-archive-converter-v1.0.0-build-75052.spec  chat-archive-converter-v1.0.0-build-99049.spec  meson.build  package-lock.json  package.json  requirements.txt  tsconfig.json
.github/workflows/: build.yml
.plandex-v2/: projects-v2.json
data/: gschemas.compiled  org.gnome.AI-Chat-Reader.desktop  org.gnome.AI-Chat-Reader.gschema.xml
data/raw/: example_claude_conversations.json  example_openai_conversations.json
docs/: Build Number Versioning-15jan2025.md  CHECKLIST-HTMLChatConverter-20250206-0950.md  SuperClaude--CodebaseAnalysis-14jan2025-07h30.txt  THEME_SYSTEM.md  Windsurf-global-rules.md  html-chat-converter-plan.md  repo-architecture.md
docs/architecture/: architecture-20250702-final.md  architecture-20250702-incremental-final.md  architecture-20250702-incremental-initial.md  architecture-20250702-initial.md  architecture-20250703-anthropic-final.md  architecture-20250703-anthropic-initial.md  architecture-20250704-gui-fix-final.md  architecture-20250704-gui-fix-initial.md  architecture-20250705-configview-fix-final.md  architecture-20250705-configview-fix-initial.md  architecture-20250706-packaging-final.md  architecture-20250706-packaging-initial.md  architecture-20250707-hkg-final.md  architecture-20250707-hkg-initial.md  architecture-20250708-llm-final.md  architecture-20250708-llm-initial.md  (+4 more)
docs/gui/: architecture.md  (+2 more)
scripts/: alby_client.py  build.py  build_packages.sh  cli.spec  config.py  convert_anthropic_chats.py  convert_openai_chats.py  convert_to_html.py  export_conversations.py  extract_concepts.py  gumroad_client.py  post-install.sh  process_anthropic_delta.py  process_openai_delta.py  revenuecat_client.py
src/: generator.ts  hkgImporter.ts  main.js
(+33 files in other folders)
